[package]
name = "ramup"
version = "0.1.0"
authors = ["mkazutaka <paper.sheet.kami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"]}
clap = "2"
ctrlc = "3.1.3"
shellexpand = "1.1.1"
rust-embed="5.2.0"
