[package]
name = "ramup"
version = "0.1.4"
authors = ["mkazutaka <paper.sheet.kami@gmail.com>"]
description = "A command supports your work on RAMDisk"
edition = "2018"
license = "MIT"
readme = "Readme.md"
homepage = "https://github.com/mkazutaka/ramup"
repository = "https://github.com/mkazutaka/ramup"
keywords = ["ramdisk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"]}
clap = {version = "~2.33.0", features = ["yaml"]}
ctrlc = "3.1.3"
shellexpand = "2.0.0"
rust-embed="5.2.0"
fs_extra = "1.1.0"
rusync = "0.5.2"
plist = "0.5"
anyhow = "1.0"
thiserror = "1.0"
path_abs = "0.5"
indicatif = "0.14"
console = "0.9"

[dev-dependencies]
tempfile = "3"
tempdir = "0.3"
serial_test = "0.3"
